@@ -23,6 +23,11 @@ Features
   converted implicitly to strings in the result.  Previously passing integers
   or longs as elements would cause a TypeError.
 
+- ``pyramid_alchemy`` paster template now uses ``query.get`` rather than
+  ``query.filter_by`` to take better advantage of identity map caching.
+
+- ``pyramid_alchemy`` paster template now has unit tests.
+
 1.0 (2011-01-30)
 ================
 
